deploy/k8s/local-dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lop-backend
  namespace: dev
spec:
  selector:
    app: lop-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
