deploy/k8s/local-dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lop-frontend
  namespace: dev
spec:
  selector:
    app: lop-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
